# OpenGL-platformer

./: CMakeLists.txt  README.md
src/: cube.cpp  engine.cpp  engine.h  main.cpp  object.cpp  object.h  shader.cpp  shader.h  sphere.cpp  vertex.h  worldmanager.cpp  worldmanager.h
